--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -27,26 +27,26 @@ RUN wget ${MINICONDA_INSTALLER_URL} && \
     /opt/conda/bin/conda update conda -y
 
 # Create vscode user.
-ARG USERNAME=developer
+ARG USERNAME=ubuntu
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
-RUN useradd -m $USERNAME \
-    && usermod --shell /bin/bash developer \
-    && usermod -aG sudo developer \
-    && echo developer ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/developer \
-    && chmod 0440 /etc/sudoers.d/developer \
-    && mkdir -p /home/developer/.conda \
-    && chown -R developer:developer /home/developer/.conda \
-    && mkdir -p /workspace \
-    && chown -R developer:developer /workspace \
-    && ln -sfn /workspace /home/developer/workspace
+RUN mkdir -p /workspace && \
+    # useradd -m $USERNAME && \
+    usermod -aG sudo ${USERNAME} && \
+    echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} && \
+    chmod 0440 /etc/sudoers.d/${USERNAME} && \
+    usermod --shell /bin/bash ${USERNAME} && \
+    mkdir -p /home/${USERNAME}/.conda && \
+    chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}/.conda && \
+    chown -R ${USERNAME}:${USERNAME} /workspace && \
+    ln -sfn /workspace /home/${USERNAME}/workspace
 
     # Add conda to PATH and set default shell
-ENV PATH="/opt/conda/bin:/home/developer/.local/bin:${PATH}"
+ENV PATH="/opt/conda/bin:/home/${USERNAME}/.local/bin:${PATH}"
 SHELL ["/bin/bash", "-c"]
 
-USER $USERNAME
-WORKDIR /home/$USERNAME
+USER ${USERNAME}
+WORKDIR /home/${USERNAME}
 
 # enable bash completion
 RUN conda init bash && conda config --set auto_activate_base false && \
@@ -56,4 +56,4 @@ RUN conda init bash && conda config --set auto_activate_base false && \
     echo -e "export PROMPT_COMMAND='history -a'" >> ~/.bashrc && \
     echo -e "source ~/.bashrc" >> ~/.bash_profile 
 
-# VOLUME [ "/workspace", "/home/developer/.conda" ]
+# VOLUME [ "/workspace", "/home/${USERNAME}/.conda" ]
