--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,6 @@
       }
     },
     //"postCreateCommand": "conda init bash && conda config --set auto_activate_base false",
-    "remoteUser": "developer"
+    "remoteUser": "ubuntu"
   }
   
