--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,6 +4,7 @@ FROM --platform=linux/x86-64 ubuntu:latest
 # Install necessary system packages
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && \
     apt-get -y install --no-install-recommends \
+        git \
         wget \
         curl \
         bzip2 \
@@ -11,8 +12,11 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && \
         gnupg \
         sudo \
         bash-completion \
-        git \
+        build-essential \
         ffmpeg \
+        alsa-utils \
+        libasound2-dev \
+        portaudio19-dev \
     && apt-get autoremove -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
@@ -32,7 +36,7 @@ RUN wget ${MINICONDA_INSTALLER_URL} && \
 ARG USERNAME=ubuntu
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
-RUN mkdir -p /workspace && \
+RUN echo "Creating user: ${USERNAME}" && \
     # useradd -m $USERNAME && \
     usermod -aG sudo ${USERNAME} && \
     echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} && \
@@ -40,6 +44,9 @@ RUN mkdir -p /workspace && \
     usermod --shell /bin/bash ${USERNAME} && \
     mkdir -p /home/${USERNAME}/.conda && \
     chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}/.conda && \
+    mkdir -p /home/${USERNAME}/.config && \
+    chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}/.config && \
+    mkdir -p /workspace && \
     chown -R ${USERNAME}:${USERNAME} /workspace && \
     ln -sfn /workspace /home/${USERNAME}/workspace
 
@@ -49,6 +56,37 @@ SHELL ["/bin/bash", "-c"]
 
 USER ${USERNAME}
 WORKDIR /home/${USERNAME}
+
+# install nodejs
+# Download and install nvm:
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash && \
+    # in lieu of restarting the shell
+    \. "$HOME/.nvm/nvm.sh" && \ 
+    # Download and install Node.js:
+    nvm install 22 && \
+    # Verify the Node.js version:
+    node -v && \
+    # Should print "v22.14.0". 
+    nvm current && \
+    # Should print "v22.14.0".
+    # Verify npm version:
+    npm -v && \
+    # Should print "10.9.2".
+    npm install -g firebase-tools && \
+    npm install -g typescript
+
+# install ngrok
+# RUN curl -sSL https://ngrok-agent.s3.amazonaws.com/ngrok.asc && \
+#     sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null && \
+#     echo "deb https://ngrok-agent.s3.amazonaws.com buster main" && \
+#     sudo tee /etc/apt/sources.list.d/ngrok.list && \
+#     sudo apt update && sudo apt install ngrok \
+#     && apt-get autoremove -y \
+#     && apt-get clean \
+#     && rm -rf /var/lib/apt/lists/*
+RUN curl -O https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz && \
+    sudo tar -xvzf ./ngrok-v3-stable-linux-amd64.tgz -C /usr/local/bin && \
+    ngrok --version 
 
 # enable bash completion
 RUN conda init bash && conda config --set auto_activate_base false && \
