--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 volumes:
   config:
   conda:
+  n8n:
   webapp_ws:
     external: true
 
@@ -17,6 +18,7 @@ services:
     user: "ubuntu"
     volumes:
       - webapp_ws:/workspace:cached
+      - n8n:/home/ubuntu/.n8n:cached
       - conda:/home/ubuntu/.conda:cached
       - config:/home/ubuntu/.config:rw
     # ports:
